Refs #13677; Fixed the following: - Corrected cache key to have a fixed value instead of time calculation - Moved categView declaration out of the repeat loop in dataset_view.pt - Return early from GetDataFiles and getDataFilesLink if no brains are found - Corrected broken css in their respective files

--- a/trunk/eea.dataservice/trunk/eea/dataservice/skins/dataservice_templates/countries_widget.css
+++ b/trunk/eea.dataservice/trunk/eea/dataservice/skins/dataservice_templates/countries_widget.css
@@ -1,7 +1,7 @@
 .countries-widget-select {
   padding: 2px;
   float: left;
-  margin-right: 1em
+  margin-right: 1em;
 }
 
 .countries-widget-select option {
